@@ -7,12 +7,13 @@
   <p>
     While this is not good, this problem can be automatically repaired,
     often without data loss.
-  <p>
-    When possible, the corrupt data will be recovered from other #
-    repositories. You should make sure any other repositories that might #
-    have this data are available before continuing. So, plug in any #
-    removable drive that contains a repository, or make sure your network #
-    connection to other repositories is active.
+  $if repairingmainrepo
+    <p>
+      When possible, the corrupt data will be recovered from other #
+      repositories. You should make sure any other repositories that might #
+      have this data are available before continuing. So, plug in any #
+      removable drive that contains a repository, or make sure your network #
+      connection to other repositories is active.
   <p>
     <a .btn .btn-primary href="@{RepairRepositoryRunR u}" onclick="$('#workingmodal').modal('show');">
       Start Repair Process
