@@ -10,6 +10,8 @@ git-annex (4.20131025) UNRELEASED; urgency=low
     without such a file, so files can still be retreived from them.
   * assistant: Automatically repair damanged git repository, if it can
     be done without losing data.
+  * assistant: Support repairing git remotes that are locally accessible
+    (eg, on removable drives).
 
  -- Joey Hess <joeyh@debian.org>  Sat, 26 Oct 2013 12:11:48 -0400
 
